# ktail

./: CMakeLists.txt  README.md  ktail_config.in
src/: config.c  config.h  ktail.c  ktail.h  main.c  tail.c  tail.h  utils.c  utils.h
